--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,8 +24,9 @@ html {
   width: 100%;
   min-width: 1000px;
   margin: 0 auto;
-  padding-top: 60px;
+  padding-top: 120px;
   background: #ededed;
+  box-sizing: border-box;
 }
 ul{
   padding: 0;
