--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,13 +10,10 @@ body {
   font-size: 14px;
 }
 
-label {
-  font-weight: 700;
-}
-
 html {
-  height: 100%;
+  min-height: 100%;
   box-sizing: border-box;
+  background: #ededed;
 }
 
 #app{
@@ -122,4 +119,8 @@ div:focus{
 
 .text-center {
   text-align: center
+}
+
+.el-form label{
+  color: #000
 }
